Layout - Modulo - Categoria

--- a/app-front/src/app/pages/cvirtual/categoria/categoria.component.html
+++ b/app-front/src/app/pages/cvirtual/categoria/categoria.component.html
@@ -1,1 +1,11 @@
-<p>categoria works!</p>
+<div class="cat-container">
+
+  <div class="left-container">
+    
+  </div>
+
+  <div class="right-container">
+    
+  </div>
+
+</div>
