--- a/app-front/src/app/pages/layout/layout.component.html
+++ b/app-front/src/app/pages/layout/layout.component.html
@@ -1,11 +1,13 @@
 <div class="layout-wrapper" [class]="containerClass">
     <app-topbar></app-topbar>
 
-    <p-breadcrumb 
-        class="max-w-full" 
-        [model]="items" 
-        [home]="home">
-    </p-breadcrumb>
+    <div class="card flex justify-content-center">
+        <p-breadcrumb 
+            class="max-w-full" 
+            [model]="items" 
+            [home]="home" />
+    </div>    
+    
 
     <div class="layout-sidebar">
         <app-sidebar></app-sidebar>
